IVYPORTAL-8160 Refactor Task Analysis II - Fix Scrollbar Case/Task Category

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -492,6 +492,7 @@ body .ui-selectcheckboxmenu-panel .ui-selectcheckboxmenu-header .ui-selectcheckb
 .filter-category-checkbox-tree .ui-tree-container{
 	height: auto;
 	max-height: 500px;
+	overflow: auto !important;
 }
 
 .filter-category-checkbox-tree.ui-tree .ui-treenode .ui-treenode-label{
